test/conformance/kuttl/verifyImages/clusterpolicy/standard/keyed-secret-from-policy/01-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: secret-in-keys
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
